fix table css style to include borders and spacing

--- a/_sass/_reset.scss
+++ b/_sass/_reset.scss
@@ -42,10 +42,24 @@ q:before, q:after {
 	content: '';
 	content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border: solid 1px #DDEEEE;
+    border-collapse: collapse;
+    border-spacing: 0;
+    font: normal 14px Arial, sans-serif;
 }
+thead th {
+    background-color: #DDEFEF;
+    border: solid 1px #DDEEEE;
+    padding: 10px;
+    text-align: left;
+}
+tbody td {
+    border: solid 1px #DDEEEE;
+    padding: 10px;
+}
+
 // Apply a natural box layout model to all elements
 // from: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
 *, *:before, *:after {
